@@ -438,7 +438,6 @@ i_psamp_ddoub(i_img *im, i_img_dim l, i_img_dim r, i_img_dim y,
   i_img_dim count, i, w;
 
   if (y >=0 && y < im->ysize && l < im->xsize && l >= 0) {
-    int all_unmasked;
     i_img_dim offset;
     if (r > im->xsize)
       r = im->xsize;
@@ -530,7 +529,6 @@ i_psampf_ddoub(i_img *im, i_img_dim l, i_img_dim r, i_img_dim y,
   i_img_dim count, i, w;
 
   if (y >=0 && y < im->ysize && l < im->xsize && l >= 0) {
-    int all_unmasked;
     i_img_dim offset;
     if (r > im->xsize)
       r = im->xsize;
