@@ -1,5 +1,16 @@
 Imager release history.  Older releases can be found in Changes.old
 
+Imager 0.92 - 14 Aug 2012
+===========
+
+ - giflib 4.2 eliminates the GIF_LIB_VERSION macro, handle that
+   correctly for both probing and runtime.
+   https://rt.cpan.org/Ticket/Display.html?id=77672
+
+ - allow building JPEG/imexif.c on C89 compilers.
+
+ - allow building GIF/imgif.c on C89 compilers.
+
 Imager 0.91 - 4 Jun 2012
 ===========
 
